# stock-snatcher

./: .env_example  .pre-commit-config.yaml  Makefile  Projeto Stock Snatcher.md  README.md  alembic.ini  commits_check_config.yaml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: a44bed8ce055_start.py  b2c4314ef7a9_texto_sobre_migração.py  d3dcf8822b91_log_de_request_e_response.py
infra/: README.md  docker-compose.yml
infra/airflow/: Dockerfile  entrypoint.sh
infra/psql_db/: Dockerfile  init.sql
infra/snatcher/: Dockerfile
src/seedwork/: singleton.py
src/snatcher/: boot.sh  main.py  settings.py
src/snatcher/app/: extractor.py  stock.py
src/snatcher/domain/aggregates/: __init__.py
src/snatcher/domain/entity/: __init__.py
src/snatcher/domain/value/: __init__.py
src/snatcher/infra/controller/: __init__.py  base.py  extractor.py  generic.py  logging.py  stock.py
src/snatcher/infra/enumerator/: http_exception.py
src/snatcher/infra/exception/: __init__.py
src/snatcher/infra/exception/http/: __init__.py
src/snatcher/infra/model/: __init__.py  database.py  logging.py  stock.py
src/snatcher/infra/repository/: __init__.py  stock.py
src/snatcher/infra/schema/: __init__.py
src/snatcher/modules/: __init__.py
src/snatcher/modules/redis/: __init__.py
src/snatcher/seedwork/: README.md  singleton.py
src/snatcher/seedwork/app/: base.py
src/snatcher/seedwork/domain/: base.py
src/snatcher/seedwork/exceptions/: base.py
src/snatcher/seedwork/infra/api/: base.py
src/snatcher/seedwork/infra/defaults/: __init__.py
src/snatcher/seedwork/infra/repository/: base.py
src/snatcher/seedwork/infra/schemas/: __init__.py  base.py  health.py  logging.py  pagination.py
src/snatcher/seedwork/infra/setup/: base.py
src/snatcher/seedwork/infra/utils/: filter.py  pagination.py
tests/: test_settings.py
